# chatgpt-telegram-bot

./: .gitignore  Dockerfile  Pipfile  docker-compose.yml  index.html  main.py  openai_helper.py  pyproject.toml  telegram_bot.py
api/telegram/: __init__.py  telegram_bot.py  telegram_user.py
api/web/: query.py
core/: openai_helper.py
resources/: web_api.ini
telegram_chat/: telegram_bot.py  telegram_mode.py  telegram_user.py
